tests/tooling/fixtures/native/execution/positive/message_send_nil_conditional_receiver_elision.objc3
// Positive execution fixture: compile-time conditional nil receiver elides runtime dispatch.
module MessageSendNilConditionalReceiverElisionExecution;

fn main() {
  let sent = [(1 ? nil : 1) ping];
  return sent + 22;
}
